# uefi-rs

./: Cargo.toml  README.md  devlog-eav.md
loader/: Cargo.toml  build.py  devlog-eav.md
loader/src/: main.rs
