[package]
name = "loader"
version = "0.0.1"
authors = ["Eric Vaitl <evaitl@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
#ed25519-dalek="^1.0.1"
uefi = { path = "..", features = ['exts'] }
uefi-services = { path = "../uefi-services" }

log = { version = "0.4.11", default-features = false }

elf_rs = "0.1.3"

# When building using Cargo's `build-std` feature, the `mem` feature of `compiler-builtins`
# does not automatically get enabled. Therefore, we have to manually add support for
# the memory functions.
rlibc = "1.0.0"
[dependencies.ed25519-dalek]
version="^1.0.1"
default-features=false
features=["u64_backend"]
[dependencies.digest]
version="^0.9.0"
default-features=false
features=[]
[dependencies.sha2]
version="0.9.2"
default-features=false
features=["force-soft"]

[features]
# This feature should only be enabled in our CI, it disables some tests
# which currently fail in that environment (see #103 for discussion).
ci = []
qemu = ["uefi-services/qemu"]
